# wargames-ai-backend

./: .env.example  .env.litellm.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  check_usage_methods.py  debug_usage.py  generate_openapi.py  llm_config.yaml  llm_scratch.py  openapi.json  openapi.yaml  pyproject.toml  tournament_challenge_integration_test.py
.claude/: settings.local.json
.claude/agents/: backend-architect.md  code-reviewer.md  frontend-developer.md
.devcontainer/: devcontainer.json
docs/: API.md  LLM_INTEGRATION.md  openapi.json  openapi.yaml
scripts/: generate_openapi.py  test_api.sh
src/: sqlacodegen.sh
src/backend/: agent_scratch.py  config.py  database.py  db_api.py  evaluation.py  example_agent_usage.py  exceptions.py  red_team_example.py  server.py
src/backend/agents/: letta.py
src/backend/database/: connection.py  locking.py  models.py
src/backend/llm/: __init__.py  agent.py  client.py  config.py  formatters.py  red_team_agent.py  settings.py  shim.py  tools.py
src/backend/models/: evaluation.py  llm.py  models.py  supplemental.py
src/backend/util/: log.py
tests/: test_llm.py
wargames-ai-backend/src/backend/: server.py
wargames-ai-backend/src/backend/agents/: letta.py
wargames-ai-backend/src/backend/models/: supplemental.py
