[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wargames-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "letta-client>=0.1.223",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlacodegen>=3.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/backend"]


