[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wargames-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "letta-client>=0.1.223",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlacodegen>=3.0.0",
    "sqlmodel>=0.0.24",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.11.12",
]


[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.uv]
# package = true
exclude-newer = "2025-07-29T00:00:00Z"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# ignore = ["E203"]  # Whitespace before ':'
unfixable = ["B"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
# extraPaths = ["src"]
useLibraryCodeForTypes = true
pythonVersion = "3.12"
typeCheckingMode = "strict"
